优化ModuleManager的模块注册判断逻辑，修复实例化重复问题；新增AbstractModule抽象基类，封装模块公共生命周期与配置加载逻辑